--- a/Register/register.html
+++ b/Register/register.html
@@ -83,6 +83,19 @@
                 
                 <div class="main-log-explain">
                     <h3 style="font-size: 23px; color: #31708f;">说明</h3>
+                    <div class="main-side-nav-container">
+                        <a href="/Contact/contact.html" style="display: inline-block; margin-left: 9px;">
+                            <img class="main-img-center" src ="/img/help-.png"/>
+                          <br/>  帮助
+                        </a>
+                    </div>
+
+                    <div style="margin-top: 75px;" class="main-side-nav-container">
+                        <a href="/Contact/contact.html" style="display: inline-block; margin-left: 9px;">
+                            <img  style="width: 23px; margin-left: 2px;" class="main-img-center" src ="/img/help-2.png"/>
+                          <br/>  反馈
+                        </a>
+                    </div>
                     <p class="main-explain-content">1. 我们希望通过一起帮，能直接解决大家在电脑操作/软件使用/编程学习等方面的具体问题。</p>
                     <p class="main-explain-content">2. 现在互联网远程技术（比如QQ桌面共享）已经非常成熟，当我们再遇到上述问题，如果别人能直接远程给予帮助，岂不是好？。</p>
                     <p class="main-explain-content">3. 当然，你也可以在你熟悉的领域去帮助别人。由此而形成我们这个“你帮他他帮我我帮你，大家一起帮”的网上互助社区平台。。</p>
