--- a/JS/littlejs.html
+++ b/JS/littlejs.html
@@ -6,16 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>作业集合</title>
 
-    <script src="/JS/littlejs.js"></script>
+    <script src="/JS/Onelittle.js"></script>
+    <script src="/JS/Twolittle.js"></script>
+    <script src="/JS/Threelittlejs.js"></script>
 </head>
 
 <script>
-    alert('不要怂就是干') ;
+    // alert('不要怂就是干') ;
 </script>
 
-<button type="button" name="" id="" class="btn btn-primary" onclick="ts()">点击我吧！</button>
 
+<button type="button" name="" id="" class="btn btn-primary" onclick="ts()">点击我吧！</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="tst()">点击我吧！ 测试打印值是否改变</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="tst1()">点击我吧！</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="tst2()">点击我吧！</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="tst3()">对象取出值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="test4()">插入值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Nabertest()">判断小王帮帮豆数量等级</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Loopoutput()">循环输出</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Loopoutput2()">循环输出yjd真水</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Arraytest()">数组</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Arraytest2()">数组2</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Arraytest3()">计算奇数</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Arraytest4()">找到最小</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="Repetition()">重复值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="tst1()">重复值1</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="abb()">重复值1</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="sss()">两个数组重复值1</button>Aarray1
+<button type="button" name="" id="" class="btn btn-primary" onclick="Aarray1()">两个数组重复值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="array2()">两个数组重复值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="names()">两个数组重复值</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="twoarray1()">二维数组</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="ysj()">杨辉三角</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="array5()">对比重复</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="array7()">对比重复</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="array8()">对比重复8</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="array9()">对比重复9</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="ssss()">对比重复s</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="bSort()">冒泡</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="sth()">冒泡1</button>
+<button type="button" name="" id="" class="btn btn-primary" onclick="ysjj()">杨辉三角简单版</button>
 <body>
+
+
 
 </body>
 
