js作业 函数调用

--- a/JS/littlejs.html
+++ b/JS/littlejs.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>作业集合</title>
 
+    <script>
+
+     </script>
+
     <script src="/JS/Onelittle.js"></script>
     <script src="/JS/Twolittle.js"></script>
     <script src="/JS/Threelittlejs.js"></script>
+    <script src="/JS/FiveLittle.js"></script>
+    <script src="/JS/Sixlittle.js"></script>
 </head>
 
 <script>
-    // alert('不要怂就是干') ;
+    var sb = 123;
 </script>
+
+
 
 
 <button type="button" name="" id="" class="btn btn-primary" onclick="ts()">点击我吧！</button>
@@ -46,6 +54,10 @@
 <button type="button" name="" id="" class="btn btn-primary" onclick="bSort()">冒泡</button>
 <button type="button" name="" id="" class="btn btn-primary" onclick="sth()">冒泡1</button>
 <button type="button" name="" id="" class="btn btn-primary" onclick="ysjj()">杨辉三角简单版</button>
+
+<div style="border:  1px  solid red; ">
+    <button type="button" name="" id="" class="btn btn-primary" onclick="pollution()">全局变量污染</button>
+</div>
 <body>
 
 
