--- a/Article/bsr-article.html
+++ b/Article/bsr-article.html
@@ -17,6 +17,8 @@
  
   <!-- 图标引用 -->
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 
@@ -153,13 +155,14 @@
                       说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
                     </p>
 
-                    <div>
+                    <div class="batch">
                         <span style="font-size: 14px;">
                             <i class="fa fa-tags" aria-hidden="true"></i>
                             关键字:</span>
-                        <span class="badge badge-primary">Primary</span>
-                        <span class="badge badge-primary">Primary</span>
-                        <span class="badge badge-primary">Primary</span>
+                        <span class="badge badge-primary">Primary1</span>
+                        <span class="badge badge-primary">Primary2</span>
+                        <span class="badge badge-primary">Primary3</span>
+                        <span>30</span>
                     </div>
 
                 </div>
@@ -182,13 +185,14 @@
                       说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
                     </p>
 
-                    <div>
+                    <div class="batch">
                         <span style="font-size: 14px;">
                             <i class="fa fa-tags" aria-hidden="true"></i>
                             关键字:</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
+                        <span>0</span>
                     </div>
 
                 </div>
@@ -211,13 +215,14 @@
                       说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
                     </p>
 
-                    <div>
+                    <div class="batch">
                         <span style="font-size: 14px;">
                           <i class="fa fa-tags" aria-hidden="true"></i>
                             关键字:</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
+                        <span>0</span>
                     </div>
 
                 </div>
@@ -240,13 +245,14 @@
                       说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
                     </p>
 
-                    <div>
+                    <div class="batch" >
                         <span style="font-size: 14px;">
                             <i class="fa fa-tags" aria-hidden="true"></i>
                             关键字:</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
+                        <span>0</span>
                     </div>
 
                 </div>
@@ -269,13 +275,14 @@
                       说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
                     </p>
 
-                    <div>
+                    <div class="batch" >
                         <span style="font-size: 14px;">
                             <i class="fa fa-tags" aria-hidden="true"></i>
                             关键字:</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
                         <span class="badge badge-primary">Primary</span>
+                        <span>0</span>
                     </div>
 
                 </div>
@@ -424,7 +431,8 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
     integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
     crossorigin="anonymous"></script> -->
-
+  <!-- js引用 -->
+  <script src="/pagejs/bsr-article.js"></script>
 </body>
 
 </html>
