--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <a class="top-hint-gather">全部消息</a>
         </div>
 
-    </header>
+    </header> 
     
-    <main>
+    <main style="margin: 5px;">
         <div class="main-container">
             <div class="main-log-container clearfix-after">
 
