--- a/isjqqure/onebasics.html
+++ b/isjqqure/onebasics.html
@@ -8,6 +8,12 @@
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
+    <!-- 注意 -->
+    <!-- 不要用jquery中的 id选择器 和类选择器 ，也不要用位置选择器，dom元素一动，那就全部都变了 
+    class和才算是 都有重复 容易崩 ，
+    用属性选择器 ，自己设置属性 然后选择拿到，这些属性大概都是归js使用 
+    -->
+
 
     <!-- 基础知识 -->
     <!--一部分资料在有道  -->
