--- a/mvp/mvp.html
+++ b/mvp/mvp.html
@@ -7,6 +7,35 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+var Acount = 0 ;
 
+ function isnumber (number,fun) {
+
+    for (let i = 0; i < number.length; i++) {
+
+        if ( (has9(number[i])) ) {
+            Acount++;
+        } 
+        else{
+            console.log('不是');
+        }
+    }
+    console.log(Acount);
+};
+
+// isnumber([0,9,8,6,0,9,8,6,0]);
+
+
+// 判断9 //comparison 对比 nine 9 
+function has9(number) {
+
+        if (number==9 ) {
+            return true ;
+        }else{
+            return false;
+        }    
+    }
+    </script>
 </body>
 </html>
