--- a/Article/bsr-770.html
+++ b/Article/bsr-770.html
@@ -17,6 +17,10 @@
  
   <!-- 图标引用 -->
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+
+<!-- vue 引用 -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 </head>
 
 
@@ -133,14 +137,14 @@
                 </head>
                 
                 
-                <div class="card-body">
+                <div id="div-content"  class="card-body">
                     <span  style="margin-top: 5px; margin-bottom: 8px; display: inline-block;">
                         <i class="fa fa-calendar" aria-hidden="true"></i>
-                        2021年04月25日 17点48分
+                        {{time}}
                     </span>
 
                     <a style="display: block ; margin-top: 20px; margin-bottom: 15px;" href="">
-                    <h5 class="card-title">常见面试题：GET和POST </h5>
+                    <h5 class="card-title">{{head}} </h5>
                     </a>
 
                     <div style="height: 3rem;"></div>
@@ -153,9 +157,9 @@
                         <li>Header/Body：无论是Request和Response，除了URL和Html文件，还有一些额外的信息，存放在他们的Header中。</li>
                     </ul>
                     <p>GET和POST就是定义在Request的Header中的，向服务器说明，用何种方式方法（method）进行请求的标记数据。</p>
-                    <p>一般来说，地址栏直接输入网址，或者在网页中点击链接，默认都是GET方式；只有在form标签中定义了method="post"，浏览器才会使用POST方式发送请求。我们可以使用调试器F12，在Network中查看：</p>
+                    <p >一般来说，地址栏直接输入网址，或者在网页中点击链接，默认都是GET方式；只有在form标签中定义了method="post"，浏览器才会使用POST方式发送请求。我们可以使用调试器F12，在Network中查看：</p>
 
-                    <img src="/img/wzxqa2.png" alt="">
+                    <p v-html="img"></p>
 
                     <ul>来龙去脉：<a>（参考HTTP的发展）</a>
                         <li>最早的HTTP协议既没有POST，也没有Header……</li>
@@ -453,13 +457,7 @@
     </div>
   </footer>
 
-  <!-- <link rel="stylesheet" type="" href="/bootstrap-4.3.1/dist/js/bootstrap.min.js"> -->
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script> -->
-
 </body>
+<script src="/vue/article-770.js"></script>
 
 </html>
