--- a/Article/bsr-article.html
+++ b/Article/bsr-article.html
@@ -18,6 +18,9 @@
   <!-- 图标引用 -->
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
 
+  <!-- vue 引用 -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 
 </head>
 
@@ -138,51 +141,18 @@
       <div class="row justify-content-center ">
         <div style="margin-left: 2.5%;" class="col-lg-5">
 
-            <div style="line-height: 2;" class="card w-95%">
+            <div  style="line-height: 2;" class="card w-95%">
 
-                <div class="card-body">
-                    <span  style="margin-top: 5px; margin-bottom: 8px; display: inline-block;">
-                        <i class="fa fa-calendar" aria-hidden="true"></i>
-                        2021年04月25日 17点48分
-                    </span>
-                    <a href="">
-                    <h5 class="card-title">因为学历的问题，我丢掉了一个学生，但我不后悔！永远都不会……</h5>
-                    </a>
-                    <p style="font-size: 12px;" class="card-text">事情经过然后就被围攻，让他去读书……开始我觉得没啥，能读就读呗，毕竟才16岁，这个年龄除非极其特殊的原因，否则我也不收。
-                      但后来话说得越来越难听：我还是忍了，带点情绪，也正常，另外因为“乐理”是我的准学生，不能得罪。只是私聊了一下“老公”，让他自己要争气。
-                      最后是“乐理”主动@了我，我忍不住了，随便说了几句：退群有点难过，但我不后悔，永远不会！
-                      “乐理”，你还是不够俏皮，不够阅历啊讲一讲聊天记录谭乔：抑郁症其实我一直无法感受抑郁症的痛苦，
-                      说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
-                    </p>
-
-                    <div class="batch">
-                        <span style="font-size: 14px;">
-                            <i class="fa fa-tags" aria-hidden="true"></i>
-                            关键字:</span>
-                        <span class="badge badge-primary">Primary1</span>
-                        <span class="badge badge-primary">Primary2</span>
-                        <span class="badge badge-primary">Primary3</span>
-                        <span>30</span>
-                    </div>
-
-                </div>
-            </div>
-
-            <div style="line-height: 2;" class="card w-95%">
-
-                <div class="card-body">
+                <div id="div-content" class="card-body">
                     <span  style="margin-top: 5px; margin-bottom: 8px; display: inline-block;">
                       <i class="fa fa-calendar" aria-hidden="true"></i>
-                        2021年04月25日 17点48分
+                        {{time}}
                     </span>
                     <a href="">
-                    <h5 class="card-title">因为学历的问题，我丢掉了一个学生，但我不后悔！永远都不会……</h5>
+                    <h5 class="card-title">{{head}}</h5>
                     </a>
-                    <p style="font-size: 12px;" class="card-text">事情经过然后就被围攻，让他去读书……开始我觉得没啥，能读就读呗，毕竟才16岁，这个年龄除非极其特殊的原因，否则我也不收。
-                      但后来话说得越来越难听：我还是忍了，带点情绪，也正常，另外因为“乐理”是我的准学生，不能得罪。只是私聊了一下“老公”，让他自己要争气。
-                      最后是“乐理”主动@了我，我忍不住了，随便说了几句：退群有点难过，但我不后悔，永远不会！
-                      “乐理”，你还是不够俏皮，不够阅历啊讲一讲聊天记录谭乔：抑郁症其实我一直无法感受抑郁症的痛苦，
-                      说实话，我以前就有点觉得：矫情，闲的……但是呢，我还保持一点理智，因为有 ……
+                    <p style="font-size: 12px;" class="card-text">
+                      {{conmtent}}
                     </p>
 
                     <div class="batch">
@@ -425,14 +395,6 @@
     </div>
   </footer>
 
-  <!-- <link rel="stylesheet" type="" href="/bootstrap-4.3.1/dist/js/bootstrap.min.js"> -->
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script> -->
-  <!-- js引用 -->
-  <script src="/pagejs/bsr-article.js"></script>
 </body>
-
+<script src="/vue/article.js"></script>
 </html>
