--- a/Article/bsr-article.html
+++ b/Article/bsr-article.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
 
-            
+            <p style="color: #ffff00 ; color: #6b44b4; color: #c04870;"></p>
 
 
         </div>
@@ -343,7 +343,6 @@
                 <div class="card-body">
                     <a href="" >
                         <a href="#" class="badge-advertising badge-secondary " v-bind:style="{backgroundColor:bg,fontWeight:Weight}" >1</a>
-                        <!-- <a style="font-weight: ;" href=""></a> -->
                         <span style="font-size: 13px;" class="card-title"> 免费广告位 抢到就是赚到</span>
                     </a>
                 </div>
