--- a/Profile/boosttrap.html
+++ b/Profile/boosttrap.html
@@ -15,6 +15,10 @@
 
   <!-- bootstrap 样式覆盖 -->
   <link rel="stylesheet" type="" href="/Profile/boostsrappro.css">
+
+    <!-- vue 引用 -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 </head>
 
 <body>
@@ -119,7 +123,7 @@
 
         
           <div style="margin-left: 1.5%;" class="col-lg-4 ">
-                <form>
+                <form id="form-bind">
 
                 <div class="main-content-container">
 
@@ -139,52 +143,39 @@
                 <div class="main-content-container">
                   <label class="main-input-title" style="display: block;">性别：</label>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <input v-model="sex"  class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="man">
                     <label class="form-check-label" for="inlineRadio1">男</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <input  v-model="sex"  class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="woman">
                     <label class="form-check-label" for="inlineRadio2">女</label>
                   </div>
                 </div>
-
 
                 <div class="main-content-container">
                   <label class="main-input-title" style="display: block;">生日：</label>
 
                   <div class="input-group-a ">
-                    <select style="height: 30px; width: 80px;" name="age">
-                      <option value="2021">2021</option>
-                      <option value="2020">2020</option>
-                      <option value="2019">2019</option>
-                      <option value="2018">2018</option>
-                      <option value="2017">2017</option>
-                      <option value="2016">2016</option>
+                    <select v-model="selecteYear"  style="height: 30px; width: 80px;">
+                      <option v-for = "s of selecteYear" v-bind:value ="s" >{{s}}</option>         
                     </select>
+
                     <button>
                       年
                     </button>
 
-                    <select style="height: 30px; width: 80px;" name="age">
-                      <option value="2021">1</option>
-                      <option value="2020">2</option>
-                      <option value="2019">3</option>
-                      <option value="2018">4</option>
-                      <option value="2017">5</option>
-                      <option value="2016">6</option>
+                    <select v-model="selecteMonth"  style="height: 30px; width: 80px;" >
+                      <option v-for = "s of selecteMonth" v-bind:value ="s" >{{s}}</option>
                     </select>
+
                     <button >
                       月
                     </button>
 
-                    <select style="height: 30px; width: 80px;" name="age">
-                      <option value="2021">1</option>
-                      <option value="2020">2</option>
-                      <option value="2019">3</option>
-                      <option value="2018">4</option>
-                      <option value="2017">5</option>
-                      <option value="2016">6</option>
+                    <select  v-model="selecteDay"  style="height: 30px; width: 80px;" >
+                      <option v-for = "s of selecteDay" v-bind:value ="s" >{{s}}</option>
                     </select>
+                
                     <button >
                       日
                     </button>
@@ -292,13 +283,7 @@
     </div>
   </footer>
 
-  <!-- <link rel="stylesheet" type="" href="/bootstrap-4.3.1/dist/js/bootstrap.min.js"> -->
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script> -->
-
 </body>
+<script src="/vue/vue-Profile.js"></script>
 
 </html>
