--- a/vue/VueHome.html
+++ b/vue/VueHome.html
@@ -15,7 +15,7 @@
 
     <div  id="yz-hello" >
         <label v-for="s of students">
-            <input  type="checkbox" :value="s.id" v-model="enrolleds"   v-model="s" />{{s.name}}
+            <input  type="checkbox" :value="s.id" v-model="enrolleds"  />{{s.name}}
         </label>
     </div>
 
