--- a/Message/Mineaxios.html
+++ b/Message/Mineaxios.html
@@ -158,14 +158,15 @@
                 <div id="news-ListFun" class="card-body">
                     <p>我的消息</p>
 
-                    <input type="checkbox">全选
-                    <button>已读</button>
+                    <input  type="checkbox" v-model="allCheckbox" v-on:click="allfun" > 全选 
+                    <button v-on:click="readstatefun"   v-on:click="readstatefun"    >已读</button>
                     <button>删除</button>
                     <br>
                     <span>时间</span>      <span>内容</span>
 
                     <div v-for = "(s,i) in  allUnread " >
-                        <input type="checkbox"> <span>{{s.title}}</span> <span>{{s.unreadContent}}</span>
+                        <input type="checkbox"  v-model="s.Selectstate"  > <span>{{s.articleTime}}</span> <span>{{s.unreadContent}}</span>
+                        <span style="display: none;">{{s.Readstate}}</span>
                     </div>
 
                 </div>
@@ -206,5 +207,5 @@
   </footer>
 
 </body>
-<script src="/vue/vue-Mineaxios.js></script>
+<script src="/vue/vue-Mineaxios.js"></script>
 </html>
